--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,21 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+				<!-- security - begin -->
+		<!--<dependency>
+		    <groupId>com.okta.spring</groupId>
+		    <artifactId>okta-spring-boot-starter</artifactId>
+		    <version>1.1.0</version>
+		</dependency>-->
+		<!-- security - end -->
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.200</version>
+	    <scope>runtime</scope>
+	</dependency>
+		
 	</dependencies>
 
 	<build>
