--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.hbm2ddl.auto: update
 spring.datasource.url=jdbc:mysql://localhost:3306/joc_de_daus02?serverTimezone=Europe/Andorra
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#okta.oauth2.issuer=https://dev-example123.okta.com/oauth2/default
+#okta.oauth2.clientId={0oak9hg3eY9Ft3Cu64x6}
+#okta.oauth2.clientSecret={FRrz5BFbLJbM3qVvqMQ9ODE1M7DtB1kxpeLfZySl}
+#okta.oauth2.redirect-uri=/authorization-code/callback
+
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
