--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 			</exclusions>
 		</dependency>
 		
-					<!-- TOKEN SECURITY-->
+		<!-- TOKEN SECURITY-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -71,6 +71,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- JSON WEB TOKEN -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		
 		
 	<dependency>
 	    <groupId>com.h2database</groupId>
