--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Spring Security
-spring.security.user.name=kevin
-spring.security.user.password=1234
+#spring.security.user.name=kevin
+#spring.security.user.password=1234
